[package]
name = "rust_kvs"
version = "0.1.0"
edition = "2021"

[dependencies]
rumqttc = "0.22.0"
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0.0"
thiserror = "1.0.44"
async-trait = "0.1.72"
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"
argh = "0.1.10"
