[workspace]
members = [
   "everest",
   "everest_build",
   "rust_kvs",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = [ "Qwello GmbH <embedded-team@qwello.eu>" ]
license-file = "LICENSE"

[workspace.dependencies]
anyhow = "1"
argh = "0.1.10"
async-trait = "0.1.72"
proc-macro2 = "1.0.66"
quote = "1.0.32"
rumqttc = "0.22.0"
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.25"
syn = "2.0.27"
thiserror = "1.0.44"
titlecase = "2.2.1"
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros"] }
