[package]
name = "everest_build"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true

[dependencies]
anyhow.workspace = true
argh.workspace = true
proc-macro2.workspace = true
quote.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
syn.workspace = true
titlecase.workspace = true
