[package]
name = "rust_kvs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true

[build-dependencies]
everest_build = { path = "../everest_build" }

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
everest = { path = "../everest" }
rumqttc.workspace = true
serde_json.workspace = true
tokio.workspace = true
